--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,10 @@ body {
   h3 {
     margin: 40px 0px;
   }
+
+  h5 {     
+    color: whitesmoke;
+    text-align: center;}
   
   button {
     border-radius: 20px;
